# test_grpc

./: Cargo.toml
proto/: say.proto
python_grpc/: README.rst  client.py  pyproject.toml
python_grpc/proto/: say_pb2.py  say_pb2_grpc.py
python_grpc/tests/: test_python_grpc.py
src/: main.rs
