[package]
name = "test_grpc"
version = "0.1.0"
authors = ["Stefan Dinescu <aaetherengine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = { version = "0.3.0", features = ["tls"] }
tokio = { version = "0.2.21", features = ["stream", "macros"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.3.0"